k8s/services/media/app/sabnzbd/httproute.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sabnzbd
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: ListenerSet
      name: media
  hostnames:
    - sabnzbd.lama-corp.space
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: sabnzbd
          port: 80
      timeouts:
        request: 60s
        backendRequest: 60s
---
apiVersion: gateway.envoyproxy.io/v1alpha1
kind: SecurityPolicy
metadata:
  name: sabnzbd
spec:
  targetRefs:
    - group: gateway.networking.k8s.io
      kind: HTTPRoute
      name: sabnzbd
  oidc:
    provider:
      issuer: https://auth.lama-corp.space/application/o/sabnzbd/
    clientID: sabnzbd
    clientSecret:
      name: sabnzbd-oidc-credentials
    scopes:
      - offline_access
    refreshToken: true
